<resources>
    <string name="app_name">GM Companion</string>
    <string name="witcher_combat_flow">Witcher Combat</string>
    <string name="not_implemented">Not implemented</string>
    <string name="witcher_combat_flow_title">The Witcher - Combat Flow</string>
    <string name="defenses">Defender Options:\n  <b>·No defense:</b> CP for hit you is 10\n  <b>·Dodge:</b> Dodge/Escape skill\n  <b>·Reposition:</b> Athletics skill. If defended, move up to &#189; your MOV\n  <b>·Block:</b> Weapon/Melee* Skill. -1 fiability/CP*\n  <b>·Deflect:</b> Weapon/Melee* Skill -3. If defended, attacker gets unbalanced\n*Melee Skill and CP is for shield defenses.\n**Every defense after the first, costs 1 STA.</string>
    <string name="attacks">Attacker Options:\n  <b>·Fast attack:</b> Attack 2 times with weapon or punch\n  <b>·Strong attack:</b> Attack for double damage with weapon, punch or kick\n  <b>·Charge:</b> Move up to RUN and make a Strong Attack, if blocked, roll Phy vs Phy to prone the defender\n  <b>·Feint:</b> Special fast attack. First attack is Deceit vs Awareness roll for +3 to hit in second attack\n  <b>·Trip:</b> Attack to prone the defender instead of doing damage\n  <b>·Pommel strike:</b> Attack for half damage Non-lethal\n  <b>·Disarm w/weapon:</b> Attack for throw defender\'s weapon 1d6 meters away\n  <b>·Disarm unarmed:</b> Brawl vs Dodge for throw defender\'s weapon 1d6/2 meters away or try to grab it with -3 to this maneuver\n  <b>·Push Kick:</b> Attack for half Kick damage and push the target body/3 meters\n  <b>·Grapple:</b> Brawl. Defender will have -2 to al physical checks and unable to move, but can try to Dodge/Escape every turn\n  <b>·Pin to the floor:</b> Grappled Brawl. Defender won\'t be able to move or act\n  <b>·Choke:</b> Grappled Brawl. Defender will be <i>suffocating</i>\n  <b>·Throw:</b> Grappled Brawl. Defender will be proned, gets punch damage and do Stun save -1</string>
    <string name="choose_options">Attacker and Defender can choose from several options. Attacker first</string>
    <string name="aim">Attacker can now decide if she want to aim:\n  <b>·Head:</b> -6 to Hit. Damage x3\n  <b>·Body:</b> -1 to Hit. Damage x1\n  <b>·Arms:</b> -3 to Hit. Damage x&#189;\n  <b>·Legs:</b> -2 to Hit. Damage x&#189;</string>
    <string name="critical"><![CDATA[<b>%1$s Critical hit!</b> +%2$d damage. Roll in Critical Tables (pg. 158) and then, defender makes Stun save]]></string>
    <string name="damage"><b>Damage:</b>\n  1. Roll weapon damage (+ silver damage). Multiply by 2 if it\'s a Strong attack.\n  2. Subtract Armor value.\n  3. Multiply appropriate modifiers (resistance, vulnerabilities and location).\n  4. Add critical damage if any.</string>
    <string name="attack_miss">The attack misses</string>
    <string name="deadly">Deadly</string>
    <string name="simple">Simple</string>
    <string name="complex">Complex</string>
    <string name="difficult">Difficult</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="roll_attack_and_defense">Roll the dies and apply proper modifiers. Is Attack above Defense?</string>
    <string name="attack_options">Show Attack Options</string>
    <string name="defense_options">Show Defense Options</string>
    <string name="gm_companion">GM Companion App</string>
    <string name="random_location">Random Location</string>
    <string name="damage_head">Head. Damage x3</string>
    <string name="damage_body">Body. Damage x1</string>
    <string name="damage_r_arm">Right arm. Damage x1/2</string>
    <string name="damage_l_arm">Left arm. Damage x1/2</string>
    <string name="damage_r_leg">Right leg. Damage x1/2</string>
    <string name="damage_l_leg">Left leg. Damage x1/2</string>
    <string name="error">Error</string>
    <string name="reroll">Reroll</string>
    <string name="adventure_generator">Adventure generator</string>
    <string name="adventure_intro"><b>Introduction:</b>How and where the adventure starts? What are the firsts problems the PCs face?</string>
    <string name="adventure_thinking"><b>Thinking problem:</b> What type of puzzle or non-combatant enemy do they face?</string>
    <string name="adventure_surprise"><b>Surprise:</b> Raise the stakes! What kind of trap, trick or setback do they face?</string>
    <string name="adventure_conflict"><b>Conflict:</b> What kind of enemy shall they fight? What test must they pass to success?</string>
    <string name="adventure_ending"><b>Ending:</b> What is their reward? What they reveal or learn? Is there any final Plot Twist?</string>
    <string name="witcher_life_events">The Witcher Background</string>
    <string name="witcher_life_title">The Witcher - Background generator</string>
    <string name="choose_origin">Elige tu Tierra Natal</string>
    <string name="elderlands">Tierras Antiguas</string>
    <string name="nilfgaard">Nilfgaard</string>
    <string name="north_kingdoms">Reinos del Norte</string>
    <string name="elf">Elfo</string>
    <string name="dwarf">Enano</string>
    <string name="generate">Generate</string>
    <string name="age"><![CDATA[<b>Edad: </b>%1$d]]></string>
    <string name="early_life"><![CDATA[<b>Infancia: </b>]]></string>
    <string name="influencer_north_1"><![CDATA[Creciste bajo la influencia de la religión local y acudías a misa cada día. <b>Equipo:</b> Texto sagrado]]></string>
    <string name="influencer_north_2"><![CDATA[Quien más te influyó fue un artesano que te enseñó a apreciar el arte y la técnica. <b>Equipo:</b> Un recuerdo que hiciste]]></string>
    <string name="influencer_north_3"><![CDATA[Quien más te influyó fue un conde que te enseñó a relajarte. <b>Equipo:</b> Anillo de plata]]></string>
    <string name="influencer_north_4"><![CDATA[Quien más te influyó fue un mago que te enseñó a no temer la magia y cuestionarlo todo. <b>Equipo:</b> Pequeño colgante]]></string>
    <string name="influencer_north_5"><![CDATA[Quien más te influyó fue una bruja de pueblo que te enseñó lo importante que es el conocimiento. <b>Equipo:</b> Muñeca de magia negra]]></string>
    <string name="influencer_north_6"><![CDATA[Quien más te influyó fue una persona maldita que te enseñó a no juzgar nunca con dureza a los demás. <b>Equipo:</b> Tótem tallado]]></string>
    <string name="influencer_north_7"><![CDATA[Quien más te influyó fue un artista que te transmitió gran parte de sus dotes escénicas. <b>Equipo:</b> Cartel o entrada]]></string>
    <string name="influencer_north_8"><![CDATA[Quien más te influyó fue un mercader que te enseñó a ser avispado y estar al tanto. <b>Equipo:</b> Una moneda que ganaste]]></string>
    <string name="influencer_north_9"><![CDATA[Quien más te influyó fue un criminal que te enseñó a cuidar de ti mismo. <b>Equipo:</b> Máscara]]></string>
    <string name="influencer_north_10"><![CDATA[Quien más te influyó fue un soldado que te enseñó a defenderte. <b>Equipo:</b> Trofeo de batalla]]></string>
    <string name="homeland_north_1">Redania (+1 a Cultura)</string>
    <string name="homeland_north_2">Kaedwen (+1 a Resistencia)</string>
    <string name="homeland_north_3">Temeria (+1 a Carisma)</string>
    <string name="homeland_north_4">Aedirn (+1 a Artesanía)</string>
    <string name="homeland_north_5">Lyria y Rivia (+1 a Resistir Coacción)</string>
    <string name="homeland_north_6">Kovir y Poviss (+1 a Negociar)</string>
    <string name="homeland_north_7">Skellige (+1 a Coraje)</string>
    <string name="homeland_north_8">Cidaris (+1 a Navegar)</string>
    <string name="homeland_north_9">Verden (+1 a Supervivencia)</string>
    <string name="homeland_north_10">Cintra (+1 a Percepción Humana)</string>
    <string name="roll_style">Roll for a random <b>Style</b></string>
    <string name="roll_values">Roll for random <b>values</b></string>
    <string name="insert_age">Introduce tu edad y presiona "Generar"</string>
    <string name="battletech_ia">Battlemech IA</string>
    <string name="battletech_kaiju">Battlekaiju IA</string>
    <string name="battletech_classic_title">Battletech classic IA</string>
    <string name="alpha_strike_title">Alpha Strike</string>
    <string name="alpha_strike_ia">Alpha Strike IA</string>
    <string name="marvel_united">Marvel United</string>
</resources>
