<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_alignParentTop="true"
    android:orientation="vertical">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/mason_family"
            android:textSize="25sp"
            android:textAlignment="center"
            android:text="@string/witcher_combat_flow_title" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/choose_options"/>
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="140dp">
            <androidx.constraintlayout.helper.widget.Flow
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:constraint_referenced_ids="attack_options,defense_options"
                app:flow_wrapMode="aligned"
                app:flow_horizontalGap="40dp"
                app:flow_horizontalStyle="packed"/>

            <LinearLayout
                android:id="@+id/attack_options"
                android:layout_width="100dp"
                android:layout_height="140dp"
                android:layout_gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/attack_img"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:src="@mipmap/attack_options" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/attack_options"
                    android:textAlignment="center" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/defense_options"
                android:layout_width="100dp"
                android:layout_height="140dp"
                android:layout_gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/defense_img"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:src="@mipmap/defense_options" />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/defense_options"
                    android:textAlignment="center" />
            </LinearLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>
        <TextView
            android:id="@+id/defenses_str"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/defenses"
            android:visibility="gone"/>
        <TextView
            android:id="@+id/attacks_str"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/attacks"
            android:visibility="gone"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/aim"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/roll_attack_and_defense"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="60dp">
            <Button
                android:id="@+id/fail"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="60dp"
                android:lines="2"
                android:gravity="center"
                android:layout_gravity="center"
                android:text="@string/no"/>
            <Button
                android:id="@+id/hit"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="60dp"
                android:lines="2"
                android:gravity="center"
                android:layout_gravity="center"
                android:text="@string/yes"/>
            <Button
                android:id="@+id/crit7"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="60dp"
                android:lines="2"
                android:text="Crit\n7+"/>
            <Button
                android:id="@+id/crit10"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="60dp"
                android:lines="2"
                android:text="Crit\n10+"/>
            <Button
                android:id="@+id/crit13"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="60dp"
                android:lines="2"
                android:text="Crit\n13+"/>
            <Button
                android:id="@+id/crit15"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="60dp"
                android:lines="2"
                android:text="Crit\n15+"/>
        </LinearLayout>
        <TextView
            android:id="@+id/miss"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/attack_miss"
            android:visibility="gone"/>
        <TextView
            android:id="@+id/critical_hit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/critical"
            android:visibility="gone"/>
        <TextView
            android:id="@+id/damage"
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/damage"
            android:visibility="gone"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">
            <Button
                android:id="@+id/roll_location"
                android:layout_width="100dp"
                android:layout_height="50dp"
                android:text="@string/random_location"
                android:textSize="6sp"
                android:visibility="gone"/>
            <TextView
                android:id="@+id/random_location"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="gone"/>
        </LinearLayout>
    </LinearLayout>