<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_alignParentTop="true"
    android:orientation="vertical">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/mason_family"
        android:textSize="25sp"
        android:textAlignment="center"
        android:text="@string/witcher_life_title" />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/choose_origin"/>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <androidx.constraintlayout.helper.widget.Flow
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:constraint_referenced_ids="north,nilfgaard,elf,dwarf"
            app:flow_wrapMode="aligned"
            app:flow_horizontalStyle="packed"/>

        <LinearLayout
            android:id="@+id/north"
            android:layout_width="90dp"
            android:layout_height="120dp"
            android:layout_gravity="center"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/north_img"
                android:layout_width="90dp"
                android:layout_height="75dp"
                android:src="@mipmap/northern_kingdoms" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/north_kingdoms"
                android:textAlignment="center" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/nilfgaard"
            android:layout_width="90dp"
            android:layout_height="120dp"
            android:layout_gravity="center"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/nilfgaard_img"
                android:layout_width="90dp"
                android:layout_height="75dp"
                android:src="@mipmap/nilfgaard" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/nilfgaard"
                android:textAlignment="center" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/elf"
            android:layout_width="90dp"
            android:layout_height="120dp"
            android:layout_gravity="center"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/elf_img"
                android:layout_width="90dp"
                android:layout_height="75dp"
                android:src="@mipmap/elf" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/elf"
                android:textAlignment="center" />
        </LinearLayout>
        <LinearLayout
            android:id="@+id/dwarf"
            android:layout_width="90dp"
            android:layout_height="120dp"
            android:layout_gravity="center"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/dwarf_img"
                android:layout_width="90dp"
                android:layout_height="75dp"
                android:src="@mipmap/dwarf" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/dwarf"
                android:textAlignment="center" />
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
    <TextView
        android:id="@+id/early_life"
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <TextView
        android:id="@+id/insert_age"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="@string/insert_age"
        android:visibility="gone"/>
    <SeekBar
        android:id="@+id/age_seekbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:min="10"
        android:progress="10"
        android:max="250"
        android:visibility="gone"/>
    <LinearLayout
        android:id="@+id/age_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:visibility="gone">
        <Button
            android:id="@+id/age_button"
            android:layout_width="100dp"
            android:layout_height="50dp"
            android:text="@string/generate"/>
        <TextView
            android:id="@+id/age_textview"
            android:layout_marginLeft="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Edad: 10"/>
    </LinearLayout>
    <TextView
        android:id="@+id/life_events"
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">
        <ImageView
            android:id="@+id/roll_style"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:src="@mipmap/reroll"/>
        <TextView
            android:id="@+id/style"
            android:layout_marginLeft="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/roll_style"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:orientation="horizontal">
        <ImageView
            android:id="@+id/roll_values"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:src="@mipmap/reroll"/>
        <TextView
            android:id="@+id/values"
            android:layout_marginLeft="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/roll_values"/>
    </LinearLayout>
</LinearLayout>