<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:orientation="vertical">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/mason_family"
        android:textSize="25sp"
        android:textAlignment="center"
        android:layout_marginBottom="10dp"
        android:text="@string/gm_companion" />
    <androidx.constraintlayout.widget.ConstraintLayout
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <androidx.constraintlayout.helper.widget.Flow
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:constraint_referenced_ids="item_witcher_combat_flow,item_witcher_life_events,item_adventure_generator,item_battletech_classic,item_lance_generator,item_mythic,item_battletech_kaiju,item_2,item_3"
            app:flow_wrapMode="aligned"
            app:flow_horizontalGap="10dp"
            app:flow_verticalGap="10dp"
            app:flow_horizontalStyle="spread"/>
        <LinearLayout
            android:id="@+id/item_witcher_combat_flow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_columnSpan="1"
            android:orientation="vertical">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@mipmap/witcher_combat_flow" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:lines="2"
                android:textAlignment="center"
                android:text="@string/witcher_combat_flow" />
        </LinearLayout>
        <LinearLayout
            android:id="@+id/item_witcher_life_events"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_columnSpan="1"
            android:orientation="vertical">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@mipmap/witcher_life" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:lines="2"
                android:textAlignment="center"
                android:text="@string/witcher_life_events" />
        </LinearLayout>
        <LinearLayout
            android:id="@+id/item_adventure_generator"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_columnSpan="1"
            android:orientation="vertical">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@mipmap/adventure_generator" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:lines="2"
                android:textAlignment="center"
                android:text="@string/adventure_generator" />
        </LinearLayout>
        <LinearLayout
            android:id="@+id/item_battletech_classic"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_columnSpan="1"
            android:orientation="vertical">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@mipmap/battletech_classic" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:lines="2"
                android:textAlignment="center"
                android:text="@string/battletech_classic" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/item_lance_generator"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_columnSpan="1"
            android:orientation="vertical">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@mipmap/mech_lance_builder" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:lines="2"
                android:textAlignment="center"
                android:text="BT Lance Generator" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/item_mythic"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_columnSpan="1"
            android:orientation="vertical">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@mipmap/mythic" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:lines="2"
                android:textAlignment="center"
                android:text="Mythic RPG" />
        </LinearLayout>
        <LinearLayout
            android:id="@+id/item_battletech_kaiju"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_columnSpan="1"
            android:orientation="vertical">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@mipmap/battletech_kaiju" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:lines="2"
                android:textAlignment="center"
                android:text="@string/battletech_kaiju" />
        </LinearLayout>
        <LinearLayout
            android:id="@+id/item_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_columnSpan="1"
            android:orientation="vertical">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@mipmap/random" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:lines="2"
                android:textAlignment="center"
                android:text="@string/not_implemented" />
        </LinearLayout>
        <LinearLayout
            android:id="@+id/item_3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_columnSpan="1"
            android:orientation="vertical">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@mipmap/random" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:lines="2"
                android:textAlignment="center"
                android:text="@string/not_implemented" />
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</LinearLayout>